main/default/objects/Nace_sectors__c/Nace_sectors__c.object-meta.xml
<CustomObject>
    <label>NACE Activity</label>
    <nameField>
        <label>NACE Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NACE Activities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>