main/default/objects/Nace_sectors__c/fields/Also_Includes__c.field-meta.xml
<CustomField>
    <fullName>Also_Includes__c</fullName>
    <label>Also Includes</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>