main/default/objects/Nace_sectors__c/fields/Excludes__c.field-meta.xml
<CustomField>
    <fullName>Excludes__c</fullName>
    <label>Excludes</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>