main/default/objects/Nace_sectors__c/fields/Includes__c.field-meta.xml
<CustomField>
    <fullName>Includes__c</fullName>
    <label>Includes</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>