main/default/objects/Nace_sectors__c/fields/ISIC_Sector__c.field-meta.xml
<CustomField>
    <fullName>ISIC_Sector__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ISIC Sector</label>
    <referenceTo>ISIC_Sector__c</referenceTo>
    <relationshipName>NACE_Codes</relationshipName>
    <type>Lookup</type>
</CustomField>