main/default/objects/Nace_sectors__c/fields/Parent_Code__c.field-meta.xml
<CustomField>
    <fullName>Parent_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Code</label>
    <referenceTo>Nace_sectors__c</referenceTo>
    <relationshipName>NACE_Sectors</relationshipName>
    <type>Lookup</type>
</CustomField>