main/default/objects/Nace_sectors__c/fields/Parent_extId_lookup__c.field-meta.xml
<CustomField>
    <fullName>Parent_extId_lookup__c</fullName>
    <label>Parent_extId_lookup</label>
    <length>255</length>
    <type>Text</type>
</CustomField>