main/default/objects/Nace_sectors__c/fields/Root_extID_lookup__c.field-meta.xml
<CustomField>
    <fullName>Root_extID_lookup__c</fullName>
    <label>Root_extID_lookup</label>
    <length>255</length>
    <type>Text</type>
</CustomField>