main/default/objects/Nace_sectors__c/fields/RootLocationId__c.field-meta.xml
<CustomField>
    <fullName>RootLocationId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RootLocationId</label>
    <referenceTo>Nace_sectors__c</referenceTo>
    <relationshipName>NACE_Sectors1</relationshipName>
    <type>Lookup</type>
</CustomField>