main/default/objects/Nace_sectors__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <label>Source</label>
    <type>Url</type>
</CustomField>