main/default/objects/Nace_sectors__c/fields/Version__c.field-meta.xml
<CustomField>
    <fullName>Version__c</fullName>
    <label>Version</label>
    <length>36</length>
    <type>Text</type>
</CustomField>