main/default/objects/Nace_sectors__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Order__c</columns>
    <columns>Description__c</columns>
    <columns>ISIC_Sector__c</columns>
    <columns>Includes__c</columns>
    <columns>Excludes__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>