main/default/objects/Nace_sectors__c/listViews/Possible_Business_Activities.listView-meta.xml
<ListView>
    <fullName>Possible_Business_Activities</fullName>
    <columns>NAME</columns>
    <columns>Description__c</columns>
    <filterScope>Everything</filterScope>
    <label>Possible Business Activities</label>
</ListView>